pin HARK version

--- a/binder/environment.yml
+++ b/binder/environment.yml
@@ -1,8 +1,6 @@
-name: cstwmpc
 channels:
   - conda-forge
 dependencies:
   - python=3.9
   - ipython>=8.8.0
-  - pip:
-      - git+https://github.com/econ-ark/HARK@master
+  - econ-ark==0.14.0
